# Drone

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  MODELAGEM_E_CONTROLE.md  README.md  TESTE_BANCADA.md  sdkconfig.defaults
.github/workflows/: docs.yml
main/: CMakeLists.txt  app_main.c  app_math.h  app_state.c  app_state.h  app_time.h  bmp280.c  bmp280.h  calibration_store.c  calibration_store.h  config.h  drone_pid.c  drone_pid.h  esc_pwm.c  esc_pwm.h  flight_control.c  flight_control.h  i2c_bus.c  i2c_bus.h  index.html  mpu9259.c  mpu9259.h  neo6m_gps.c  neo6m_gps.h  sensor_hub.c  sensor_hub.h  vertical_control.c  vertical_control.h  web_server.c  web_server.h  wifi_ap.c  wifi_ap.h
